--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,20 @@
         <title>{% block title %}{% endblock %}</title>
 
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <script src="{% static 'js/main.js' %}"></script>
+
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+              theme: {
+                extend: {
+                  colors: {
+                    clifford: '#da373d',
+                  }
+                }
+              }
+            }
+        </script>
     </head>
     <body>
         {% block navbar %}{% endblock %}
