--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,13 @@
               }
             }
         </script>
+        <style type="text/tailwindcss">
+          @layer utilities {
+            .content-auto {
+              content-visibility: auto;
+            }
+          }
+        </style>
     </head>
     <body>
         {% block navbar %}{% endblock %}
