--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,14 @@
               content-visibility: auto;
             }
           }
+          #link {
+            @apply text-gray-600 hover:text-gray-900;
+          }
+          .active {
+          
+            @apply dark:text-violet-600 dark:border-violet-600;
+          
+          }
         </style>
     </head>
     <body>
