--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -2,11 +2,11 @@
 <footer class="dark:bg-gray-100 dark:text-gray-900">
 	<div class="container flex flex-col p-4 mx-auto md:p-8 lg:flex-row dark:divide-gray-600">
 		<ul class="self-center py-6 space-y-4 text-center sm:flex sm:space-y-0 sm:justify-around sm:space-x-4 lg:flex-1 lg:justify-start">
-			<li>Shop</li>
-			<li>About</li>
-			<li>Blog</li>
-			<li>Pricing</li>
-			<li>Contact</li>
+			<li>Home</li>
+			<li>Berita</li>
+			<li>Pendaftaran</li>
+			<li>Galeri</li>
+			<li>Tentang</li>
 		</ul>
 		<div class="flex flex-col justify-center pt-6 lg:pt-0">
 			<div class="flex justify-center space-x-4">
