--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -9,16 +9,16 @@
 		</a>
 		<ul class="items-stretch hidden space-x-3 md:flex">
 			<li class="flex">
-				<a rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Link</a>
+				<a id="link" rel="noopener noreferrer" href="{% url 'home'%}" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Home</a>
 			</li>
 			<li class="flex">
-				<a rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Link</a>
+				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Berita</a>
 			</li>
 			<li class="flex">
-				<a rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border- dark:text-violet-600 dark:border-violet-600">Link</a>
+				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Pendaftaran</a>
 			</li>
 			<li class="flex">
-				<a rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Link</a>
+				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Galeri</a>
 			</li>
 		</ul>
 		<button class="flex justify-end p-4 md:hidden">
