--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -12,13 +12,19 @@
 				<a id="link" rel="noopener noreferrer" href="{% url 'home'%}" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Home</a>
 			</li>
 			<li class="flex">
-				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Berita</a>
+				<a id="link" rel="noopener noreferrer" href="{% url 'article' %}" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Berita</a>
 			</li>
 			<li class="flex">
-				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Pendaftaran</a>
+				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Anggota</a>
+			</li>
+			<li class="flex">
+				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Jadwal</a>
 			</li>
 			<li class="flex">
 				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Galeri</a>
+			</li>
+			<li class="flex">
+				<a id="link" rel="noopener noreferrer" href="#" class="flex items-center px-4 -mb-1 border-b-2 dark:border-">Tentang</a>
 			</li>
 		</ul>
 		<button class="flex justify-end p-4 md:hidden">
