--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,8 @@
         <title>{% block title %}{% endblock %}</title>
 
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <script src="{% static 'js/main.js' %}"></script>
 
         <script src="https://cdn.tailwindcss.com"></script>
@@ -14,6 +16,7 @@
                 extend: {
                   colors: {
                     clifford: '#da373d',
+                    primary: {"50":"#eff6ff","100":"#dbeafe","200":"#bfdbfe","300":"#93c5fd","400":"#60a5fa","500":"#3b82f6","600":"#2563eb","700":"#1d4ed8","800":"#1e40af","900":"#1e3a8a","950":"#172554"}
                   }
                 }
               }
