--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -6,24 +6,24 @@
 {% block navbar %} {% include "components/navbar.html" %}{% endblock %}
 
 {% block content %}
-<section class="dark:bg-gray-100 dark:text-gray-800">
+<section class="bg-gray-100 dark:bg-gray-900 dark:text-white">
 	<div class="container flex flex-col justify-center p-6 mx-auto sm:py-12 lg:py-24 lg:flex-row lg:justify-between">
 		<div class="flex items-center justify-center p-6 mt-8 lg:mt-0 h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128">
 			<img src="{% static 'image/brand.png'%}" alt="" class="object-contain h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128">
 		</div>
 		<div class="flex flex-col justify-center p-6 text-center rounded-sm lg:max-w-md xl:max-w-lg lg:text-left">
 			<h1 class="text-5xl font-bold leading-none sm:text-6xl">Mahes
-				<span class="dark:text-violet-600">Metland</span>School
+				<span class="dark:text-violet-600">Metland</span> School
 			</h1>
-			<p class="mt-6 mb-8 text-lg sm:mb-12">Website resmi maheswara maheswari metland school</p>
+			<p class="mt-6 mb-8 text-lg sm:mb-12">Brand Ambassador SMK Pariwisata Metland School</p>
 			<div class="flex flex-col space-y-4 sm:items-center sm:justify-center sm:flex-row sm:space-y-0 sm:space-x-4 lg:justify-start">
-				<a rel="noopener noreferrer" href="#" class="px-8 py-3 text-lg font-semibold rounded dark:bg-violet-600 dark:text-gray-50">Pendaftaran</a>
+				<a rel="noopener noreferrer" href="#" class="px-8 py-3 text-lg font-semibold rounded dark:bg-violet-600 dark:text-gray-50">Anggota</a>
 				<a rel="noopener noreferrer" href="#" class="px-8 py-3 text-lg font-semibold border rounded dark:border-gray-800">Tentang</a>
 			</div>
 		</div>
 	</div>
 </section>
-<section class="px-5 py-10 dark:bg-gray-100 dark:text-gray-800">
+<section class="bg-gray-100 px-5 py-10 dark:bg-gray-900 dark:text-white">
 	<div class="container grid grid-cols-12 mx-auto gap-y-6 md:gap-10">
 		<div class="flex flex-col justify-between col-span-12 py-2 space-y-8 md:space-y-16 md:col-span-3">
 			<div class="flex flex-col space-y-8 md:space-y-12">
@@ -86,7 +86,6 @@
 		<div class="hidden py-2 xl:col-span-3 lg:col-span-4 md:hidden lg:block">
 			<div class="mb-8 space-x-5 border-b-2 border-opacity-10 dark:border-violet-600">
 				<button type="button" class="pb-5 text-xs font-bold uppercase border-b-2 dark:border-violet-600">Latest</button>
-				<button type="button" class="pb-5 text-xs font-bold uppercase border-b-2 dark:border- dark:text-gray-600">Popular</button>
 			</div>
 			<div class="flex flex-col divide-y dark:divide-gray-300">
 				<div class="flex px-1 py-4">
@@ -129,45 +128,123 @@
 		</div>
 	</div>
 </section>
-<ul class="p-4 lg:p-8 dark:bg-gray-100 dark:text-gray-800">
-	<li>
-		<article>
-			<a rel="noopener noreferrer" href="#" class="grid p-4 overflow-hidden md:grid-cols-5 rounded-xl lg:p-6 xl:grid-cols-12 hover:dark:bg-gray-50">
-				<h3 class="mb-1 ml-8 font-semibold md:col-start-2 md:col-span-4 md:ml-0 xl:col-start-3 xl:col-span-9">Earum at ipsa aliquid quis, exercitationem est.</h3>
-				<time datetime="" class="row-start-1 mb-1 md:col-start-1 xl:col-span-2 dark:text-gray-600">Oct 13, 2020</time>
-				<p class="ml-8 md:col-start-2 md:col-span-4 xl:col-start-3 xl:col-span-9 md:ml-0 dark:text-gray-700">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique saepe exercitationem numquam, labore necessitatibus deleniti quasi. Illo porro nihil necessitatibus debitis delectus aperiam, fuga impedit assumenda odit, velit eveniet est.</p>
-			</a>
-		</article>
-	</li>
-	<li>
-		<article>
-			<a rel="noopener noreferrer" href="#" class="grid p-4 overflow-hidden md:grid-cols-5 rounded-xl lg:p-6 xl:grid-cols-12 hover:dark:bg-gray-50">
-				<h3 class="mb-1 ml-8 font-semibold md:col-start-2 md:col-span-4 md:ml-0 xl:col-start-3 xl:col-span-9">Earum at ipsa aliquid quis, exercitationem est.</h3>
-				<time datetime="" class="row-start-1 mb-1 md:col-start-1 xl:col-span-2 dark:text-gray-600">Oct 13, 2020</time>
-				<p class="ml-8 md:col-start-2 md:col-span-4 xl:col-start-3 xl:col-span-9 md:ml-0 dark:text-gray-700">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique saepe exercitationem numquam, labore necessitatibus deleniti quasi. Illo porro nihil necessitatibus debitis delectus aperiam, fuga impedit assumenda odit, velit eveniet est.</p>
-			</a>
-		</article>
-	</li>
-	<li>
-		<article>
-			<a rel="noopener noreferrer" href="#" class="grid p-4 overflow-hidden md:grid-cols-5 rounded-xl lg:p-6 xl:grid-cols-12 hover:dark:bg-gray-50">
-				<h3 class="mb-1 ml-8 font-semibold md:col-start-2 md:col-span-4 md:ml-0 xl:col-start-3 xl:col-span-9">Earum at ipsa aliquid quis, exercitationem est.</h3>
-				<time datetime="" class="row-start-1 mb-1 md:col-start-1 xl:col-span-2 dark:text-gray-600">Oct 13, 2020</time>
-				<p class="ml-8 md:col-start-2 md:col-span-4 xl:col-start-3 xl:col-span-9 md:ml-0 dark:text-gray-700">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique saepe exercitationem numquam, labore necessitatibus deleniti quasi. Illo porro nihil necessitatibus debitis delectus aperiam, fuga impedit assumenda odit, velit eveniet est.</p>
-			</a>
-		</article>
-	</li>
-	<li>
-		<article>
-			<a rel="noopener noreferrer" href="#" class="grid p-4 overflow-hidden md:grid-cols-5 rounded-xl lg:p-6 xl:grid-cols-12 hover:dark:bg-gray-50">
-				<h3 class="mb-1 ml-8 font-semibold md:col-start-2 md:col-span-4 md:ml-0 xl:col-start-3 xl:col-span-9">Earum at ipsa aliquid quis, exercitationem est.</h3>
-				<time datetime="" class="row-start-1 mb-1 md:col-start-1 xl:col-span-2 dark:text-gray-600">Oct 13, 2020</time>
-				<p class="ml-8 md:col-start-2 md:col-span-4 xl:col-start-3 xl:col-span-9 md:ml-0 dark:text-gray-700">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique saepe exercitationem numquam, labore necessitatibus deleniti quasi. Illo porro nihil necessitatibus debitis delectus aperiam, fuga impedit assumenda odit, velit eveniet est.</p>
-			</a>
-		</article>
-	</li>
-</ul>
-<section class="py-6 dark:bg-gray-100 dark:text-gray-900">
+<section class="bg-gray-100 text-gray-900 dark:bg-gray-900 antialiased">
+	<div class="max-w-screen-xl px-4 py-8 mx-auto lg:px-6 sm:py-16 lg:py-24">
+	  <div class="max-w-3xl mx-auto text-center">
+		<h2 class="text-4xl font-extrabold leading-tight tracking-tight text-primary-400 dark:text-white">
+		  Jadwal Acara
+		</h2>
+  
+		<div class="mt-4">
+		  <a href="#" title=""
+			class="inline-flex items-center text-lg font-medium text-primary-600 hover:underline dark:text-primary-500">
+			Learn more about our agenda
+			<svg aria-hidden="true" class="w-5 h-5 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+			  fill="currentColor">
+			  <path fill-rule="evenodd"
+				d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+				clip-rule="evenodd" />
+			</svg>
+		  </a>
+		</div>
+	  </div>
+  
+	  <div class="flow-root max-w-3xl mx-auto mt-8 sm:mt-12 lg:mt-16">
+		<div class="-my-4 divide-y divide-gray-200 dark:divide-gray-700">
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-200 sm:text-right dark:text-gray-400 shrink-0">
+			  08:00 - 09:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Opening remarks</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  09:00 - 10:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Bergside LLC: Controlling the video traffic flows</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  10:00 - 11:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Flowbite - An Open Framework for Forensic Watermarking</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  11:00 - 12:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Coffee Break</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  12:00 - 13:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Scaling your brand from €0 to multimillion euros</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  13:00 - 14:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Updates from the Open Source Multimedia community</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  14:00 - 15:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Exploring the balance between customer acquisition and retention</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  15:00 - 16:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Flowbite - An Open Framework for Forensic Watermarking</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  16:00 - 14:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Scaling your brand from €0 to multimillion euros</a>
+			</h3>
+		  </div>
+  
+		  <div class="flex flex-col gap-2 py-4 sm:gap-6 sm:flex-row sm:items-center">
+			<p class="w-32 text-lg font-normal text-gray-500 sm:text-right dark:text-gray-400 shrink-0">
+			  17:00 - 14:00
+			</p>
+			<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+			  <a href="#" class="hover:underline">Drinks & networking</a>
+			</h3>
+		  </div>
+		</div>
+	  </div>
+	</div>
+</section>
+<section class="bg-gray-100 text-gray-900 py-6 dark:bg-gray-900 dark:text-white">
 	<div class="grid max-w-6xl grid-cols-1 px-6 mx-auto lg:px-8 md:grid-cols-2 md:divide-x">
 		<div class="py-6 md:py-0 md:px-6">
 			<h1 class="text-4xl font-bold">Hubungi</h1>
