--- a/templates/pages/article.html
+++ b/templates/pages/article.html
@@ -4,15 +4,15 @@
 {% block navbar %}{% include "components/navbar.html" %}{% endblock %}
 
 {% block content %}
-<!-- inspired by tailwindcss.com -->
+<div class="bg-gray-100 dark:bg-gray-900 dark:text-white">
 <ul class="grid grid-cols-1 xl:grid-cols-3 gap-y-10 gap-x-6 items-start p-8">
     <li class="relative flex flex-col sm:flex-row xl:flex-col items-start">
         <div class="order-1 sm:ml-6 xl:ml-0">
-            <h3 class="mb-1 text-slate-900 font-semibold">
+            <h3 class="mb-1 font-semibold">
                 <span class="mb-1 block text-sm leading-6 text-indigo-500">Headless UI</span>Completely unstyled, fully
                 accessible UI components
             </h3>
-            <div class="prose prose-slate prose-sm text-slate-600">
+            <div class="prose prose-slate prose-sm text-slate-400">
                 <p>Completely unstyled, fully accessible UI components, designed to integrate beautifully with Tailwind
                     CSS.</p>
             </div><a
@@ -33,7 +33,7 @@
                 <span class="mb-1 block text-sm leading-6 text-purple-500">Heroicons</span>Beautiful hand-crafted SVG
                 icons, by the makers of Tailwind CSS.
             </h3>
-            <div class="prose prose-slate prose-sm text-slate-600">
+            <div class="prose prose-slate prose-sm">
                 <p>A set of 450+ free MIT-licensed SVG icons. Available as basic SVG icons and via first-party React and
                     Vue libraries.</p>
             </div><a
@@ -70,4 +70,5 @@
         <img src="https://tailwindcss.com/_next/static/media/heropatterns@75.82a09697.jpg" alt="" class="mb-6 shadow-md rounded-lg bg-slate-50 w-full sm:w-[17rem] sm:mb-0 xl:mb-6 xl:w-full" width="1216" height="640">
     </li>
 </ul>
+</div>
 {% endblock %}
